--- a/module03/lab1.html
+++ b/module03/lab1.html
@@ -7,6 +7,36 @@
   </head>
   <body>
 	<img src="" alt="Persona 5 Royal image" />
-  </body>
-</html>
-<h1></h1>
+	  <header>
+        <h1>Intro to 3D Printing</h1>
+        <nav>
+            <ul>
+                <li><a href="#Own experience">Own experience</a></li>
+                <li><a href="#Summary" >Summary</a></a></li>
+                <li><a href="#Review">Review</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+         <section id="Own experience">
+            <h2>About</h2>
+            <p>I have got to say if it wasn't for a certain boss i would have been playing this game for a while but had some great experience playing this game also fair waring DO NOT AFK IN MEMENTOS THE REAPER IS SUPER OP.</p>
+        </section>
+
+        <section id="Summary">
+            <h2>Services</h2>
+            <p>Persona 5 Royal is a role-playing game where players control a high school student named ren amamiya  who has been placed on probation after being falsely accused of a crime. He moves to Tokyo and forms a group of like-minded individuals known as the Phantom Thieves. Together, they enter the Metaverse, a supernatural realm tied to people's distorted desires, and steal the "hearts" of corrupt individuals to reform society. Along the way, they balance their daily school life, form bonds with allies, and uncover deeper conspiracies while navigating challenges in both the real world and the Metaverse. Persona 5 Royal builds on the original Persona 5 with new characters, locations, and story elements.
+
+</p>
+        </section>
+
+        <section id="Review">
+            <h2>Contact</h2>
+            <p>I have been playing this game for 3 weeks and i had a lot of fun the characters is probably my favorite part of the game  </p>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
