--- a/module06/lab06.html
+++ b/module06/lab06.html
@@ -10,17 +10,22 @@
 <figure>
 <picture>
   <source
-    srcset="surfer.webp"
+    srcset="rillaboom.jfif"
     media="(max-width: 600px)" />
+    <img src="rillaboom.jfif" alt="mdn" />
     <source
-    srcset="surfer.jpg"
+    srcset="wooper.jpg"
     media="(max-width: 600px)" />
+    <img src="wooper.jpg" alt="mdn" />
     <source
-    srcset="surfer.webp" />
+    srcset="gengar.jpg"
+    media="(max-width: 600px)" /> 
+    <img src="gengar.jpg" alt="mdn" />
     <source
-    srcset="surfer.jpg" />
+    srcset="rillaboom.jfif"
+    media="(max-width: 600px)" /> 
 
-  <img src="painted-hand.jpg" alt="" />
+  <img src="rillaboom.jfif" alt="mdn" />
 </picture>
 <figcaption></figcaption>
 
